# agentsec-arena

./: .gitignore  README.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/agentsec_arena/: agents.py  main.py  models.py  reports.py  safety.py  scenarios.py  scoring.py  store.py
apps/api/tests/: test_api.py  test_safety.py  test_scenarios.py  test_scoring_reports.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: dashboard.tsx
apps/web/lib/: api.ts  demo-data.ts  types.ts
docs/: safety-policy.md  scenario-authoring.md  threat-model.md
infra/compose/: base.yml  observability.yml
infra/scenarios/dvwa/: docker-compose.yml  scenario.json
infra/scenarios/juice-shop/: docker-compose.yml  scenario.json
infra/scenarios/vulhub/cve-2019-19781-citrix/: docker-compose.yml  scenario.json
infra/scenarios/vulhub/cve-2021-41773-apache/: docker-compose.yml  scenario.json
infra/scenarios/vulhub/spring4shell/: docker-compose.yml  scenario.json
workers/log-ingest/: README.md
workers/orchestrator/: README.md
